<resources>
    <string name="app_name"><font color="@color/black">My Cart</font></string>
    <string name="view_cart">View Cart</string>
    <string name="add_to_cart">Add product to Cart Img</string>
    <string name="search">Search</string>
    <string name="demo_name">A sample name used for testing purpose in this assignment</string>
    <string name="demo_price">0</string>
    <string name="demo_quantity">0</string>
    <string name="demo_sum_price">0</string>
    <string name="price_unit">₫</string>
    <string name="quantity">Quantity</string>
    <string name="sum_price">Sum price</string>
    <string name="total">Total</string>
    <string name="checkout">Checkout</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
</resources>