<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="5dp"
    android:background="@drawable/product_background">

    <ImageView
        android:id="@+id/itemImg"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="1dp"
        android:contentDescription="@string/demo_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?android:attr/fastScrollTrackDrawable" />

    <TextView
        android:id="@+id/itemName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:ellipsize="end"
        android:lines="2"
        android:maxLines="2"
        android:text="@string/demo_name"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@id/plusBtn"
        app:layout_constraintStart_toEndOf="@+id/itemImg"
        app:layout_constraintTop_toTopOf="parent"
        app:lineHeight="14sp" />

    <TextView
        android:id="@+id/itemPriceUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/price_unit"
        android:textColor="#DC3300"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/itemImg" />

    <TextView
        android:id="@+id/itemPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="10dp"
        android:text="@string/demo_price"
        android:textColor="#DC3300"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/itemPriceUnit" />

    <ImageButton
        android:id="@+id/plusBtn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="80dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/plus"
        android:padding="5dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/itemName"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/plus" />

    <ImageButton
        android:id="@+id/minusBtn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="80dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/minus"
        android:paddingStart="5dp"
        android:paddingTop="20dp"
        android:paddingEnd="5dp"
        android:paddingBottom="5dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/itemName"
        app:srcCompat="@drawable/minus" />

    <TextView
        android:id="@+id/itemQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="100dp"
        android:text="@string/demo_quantity"
        android:textColor="#DC3300"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/itemTotalPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/demo_sum_price"
        android:textColor="#DC3300"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/plusBtn"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>