<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/product"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    android:layout_marginBottom="10dp"
    android:background="@drawable/product_background">

    <ImageView
        android:id="@+id/productImg"
        android:layout_width="0dp"
        android:layout_height="190dp"
        android:contentDescription="@string/demo_name"
        android:padding="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="?android:attr/autofilledHighlight" />

    <TextView
        android:id="@+id/productName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:ellipsize="end"
        android:lines="2"
        android:maxLines="2"
        android:text="@string/demo_name"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/productImg"
        app:lineHeight="14sp" />

    <TextView
        android:id="@+id/productPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:text="@string/demo_price"
        android:textColor="#DC3300"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/priceUnit"
        app:layout_constraintTop_toBottomOf="@id/productName" />

    <TextView
        android:id="@+id/priceUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:text="@string/price_unit"
        android:textColor="#FFDC3300"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/productName" />

    <ImageButton
        android:id="@+id/addToCartBtn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/add_to_cart"
        android:padding="10dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/add_to_cart" />

</androidx.constraintlayout.widget.ConstraintLayout>